--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 @font-face {
-  font-family: 'EB Garamond';
-  src: url('/fonts/EBGaramond-Regular.woff2') format('woff2'),
-    url('/fonts/EBGaramond-Regular.woff') format('woff');
+  font-family: "EB Garamond";
+  src:
+    url("/fonts/EBGaramond-Regular.woff2") format("woff2"),
+    url("/fonts/EBGaramond-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
